docs/envoy/v1.27.1/_sources/intro/arch_overview/security/external_dep_build.rst.txt
External dependencies: ``build``
================================

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Apple Rules for Bazel <https://github.com/bazelbuild/rules_apple>`__, `2.4.1 <https://github.com/bazelbuild/rules_apple/releases/tag/2.4.1>`__, 2023-07-07, , `Apache-2.0 <https://github.com/bazelbuild/rules_apple/blob/2.4.1/LICENSE>`__
  `Aspect Bazel helpers <https://github.com/aspect-build/bazel-lib>`__, `1.33.0 <https://github.com/aspect-build/bazel-lib/releases/tag/v1.33.0>`__, 2023-07-21, , `Apache-2.0 <https://github.com/aspect-build/bazel-lib/blob/v1.33.0/LICENSE>`__
  `bazel-compilation-database <https://github.com/grailbio/bazel-compilation-database>`__, `4086479 <https://github.com/grailbio/bazel-compilation-database/tree/40864791135333e1446a04553b63cbe744d358d0>`__, 2022-09-06, , `Apache-2.0 <https://github.com/grailbio/bazel-compilation-database/blob/40864791135333e1446a04553b63cbe744d358d0/LICENSE>`__
  `bazel-toolchains <https://github.com/bazelbuild/bazel-toolchains>`__, `5.1.2 <https://github.com/bazelbuild/bazel-toolchains/releases/tag/v5.1.2>`__, 2022-08-09, , `Apache-2.0 <https://github.com/bazelbuild/bazel-toolchains/blob/v5.1.2/LICENSE>`__
  `envoy-build-tools <https://github.com/envoyproxy/envoy-build-tools>`__, `fc1ab3e <https://github.com/envoyproxy/envoy-build-tools/tree/fc1ab3e96cf275ecaac913be2a22bce4a74b9272>`__, 2023-09-20, , `Apache-2.0 <https://github.com/envoyproxy/envoy-build-tools/blob/fc1ab3e96cf275ecaac913be2a22bce4a74b9272/LICENSE>`__
  `envoy_toolshed <https://github.com/envoyproxy/toolshed>`__, `0.0.10 <https://github.com/envoyproxy/toolshed/releases/tag/bazel-v0.0.10>`__, 2023-10-02, , `Apache-2.0 <https://github.com/envoyproxy/envoy/blob/bazel-v0.0.10/LICENSE>`__
  `Gazelle <https://github.com/bazelbuild/bazel-gazelle>`__, `0.31.1 <https://github.com/bazelbuild/bazel-gazelle/releases/tag/v0.31.1>`__, 2023-06-13, , `Apache-2.0 <https://github.com/bazelbuild/bazel-gazelle/blob/v0.31.1/LICENSE>`__
  `Go rules for Bazel <https://github.com/bazelbuild/rules_go>`__, `0.39.1 <https://github.com/bazelbuild/rules_go/releases/tag/v0.39.1>`__, 2023-04-20, , `Apache-2.0 <https://github.com/bazelbuild/rules_go/blob/v0.39.1/LICENSE.txt>`__
  `Packaging rules for Bazel <https://github.com/bazelbuild/rules_pkg>`__, `0.7.0 <https://github.com/bazelbuild/rules_pkg/releases/tag/0.7.0>`__, 2022-04-07, , `Apache-2.0 <https://github.com/bazelbuild/rules_pkg/blob/0.7.0/LICENSE>`__
  `protoc-gen-jsonschema <https://github.com/norbjd/protoc-gen-jsonschema>`__, `7680e49 <https://github.com/norbjd/protoc-gen-jsonschema/tree/7680e4998426e62b6896995ff73d4d91cc5fb13c>`__, 2023-05-30, , 
  `Python rules for Bazel <https://github.com/bazelbuild/rules_python>`__, `0.24.0 <https://github.com/bazelbuild/rules_python/releases/tag/0.24.0>`__, 2023-07-11, , `Apache-2.0 <https://github.com/bazelbuild/rules_python/blob/0.24.0/LICENSE>`__
  `Ruby rules for Bazel <https://github.com/protocolbuffers/rules_ruby>`__, `37cf590 <https://github.com/protocolbuffers/rules_ruby/tree/37cf5900d0b0e44fa379c0ea3f5fcee0035d77ca>`__, 2023-01-12, , `Apache-2.0 <https://github.com/protocolbuffers/rules_ruby/blob/37cf5900d0b0e44fa379c0ea3f5fcee0035d77ca/LICENSE>`__
  `Rules for using foreign build systems in Bazel <https://github.com/bazelbuild/rules_foreign_cc>`__, `0.9.0 <https://github.com/bazelbuild/rules_foreign_cc/releases/tag/0.9.0>`__, 2022-08-02, , `Apache-2.0 <https://github.com/bazelbuild/rules_foreign_cc/blob/0.9.0/LICENSE>`__
  `rules_license <https://github.com/bazelbuild/rules_license>`__, `0.0.7 <https://github.com/bazelbuild/rules_license/releases/tag/0.0.7>`__, 2023-06-16, , `Apache-2.0 <https://github.com/bazelbuild/rules_license/blob/0.0.7/LICENSE>`__
  `Shellcheck rules for bazel <https://github.com/aignas/rules_shellcheck>`__, `0.1.1 <https://github.com/aignas/rules_shellcheck/releases/tag/v0.1.1>`__, 2022-05-30, , `MIT <https://github.com/aignas/rules_shellcheck/blob/v0.1.1/LICENSE>`__
  `utf8_range <https://github.com/protocolbuffers/utf8_range>`__, `d863bc3 <https://github.com/protocolbuffers/utf8_range/tree/d863bc33e15cba6d873c878dcca9e6fe52b2f8cb>`__, 2023-05-26, , `MIT <https://github.com/protocolbuffers/utf8_range/blob/d863bc33e15cba6d873c878dcca9e6fe52b2f8cb/LICENSE>`__

